2009-12-16  Csaba Osztrogonác  <ossy@webkit.org>

        Rubber-stamped by Simon Hausmann.

        [Qt] editing/selection/empty-cell-right-click.html introduced in r52220 failed.
        https://bugs.webkit.org/show_bug.cgi?id=32639

        * platform/qt/Skipped: editing/selection/empty-cell-right-click.html added until fix.

2009-12-16  Enrica Casucci  <enrica@apple.com>

        Reviewed by Eric Seidel.

        Right clicking in a table cell creates a selection that extends into the next cell.
        <rdar://problem/5565465>
        https://bugs.webkit.org/show_bug.cgi?id=32622

        * editing/selection/empty-cell-right-click-expected.txt: Added.
        * editing/selection/empty-cell-right-click.html: Added.

2009-12-16  Dirk Schulze  <krit@webkit.org>

        Reviewed by Nikolas Zimmermann.

        feMerge crahses if feMergeNodes attribute in is empty
        https://bugs.webkit.org/show_bug.cgi?id=32489

        The previous test only checked if feMerge works on empty node
        without a last effect. In this case we get a source image and 
        everything works fine. This test also covers the case if there
        is a last effect.

        * platform/mac/svg/custom/empty-merge-expected.checksum:
        * platform/mac/svg/custom/empty-merge-expected.png:
        * platform/mac/svg/custom/empty-merge-expected.txt:
        * svg/custom/empty-merge.svg:

2009-12-16  Dirk Schulze  <krit@webkit.org>

        Reviewed by Darin Adler.

        sourceGraphic wrong if positive x,y is >0 and objectBB is selected on Filter
        https://bugs.webkit.org/show_bug.cgi?id=32575

        Check if the GraphicsContex get adjusted, if the source rect is clipped
        to the filter rect.

        * platform/mac/svg/filters/filter-source-position-expected.checksum: Added.
        * platform/mac/svg/filters/filter-source-position-expected.png: Added.
        * platform/mac/svg/filters/filter-source-position-expected.txt: Added.